--- a/gui/detalles/detalleAfiliados.ui
+++ b/gui/detalles/detalleAfiliados.ui
@@ -135,7 +135,7 @@ color: #FFFFFF;
           </sizepolicy>
          </property>
          <property name="title">
-          <string>GroupBox</string>
+          <string>Datos del Domicilio</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_16">
           <item row="2" column="0">
@@ -1201,7 +1201,7 @@ color: #FFFFFF;
           </sizepolicy>
          </property>
          <property name="title">
-          <string>GroupBox</string>
+          <string>Datos Personales</string>
          </property>
          <layout class="QGridLayout" name="gridLayout">
           <item row="0" column="0">
@@ -1825,7 +1825,7 @@ color: #FFFFFF;
        <item row="2" column="1" colspan="2">
         <widget class="QGroupBox" name="groupBox_2">
          <property name="title">
-          <string>GroupBox</string>
+          <string>Datos de Contacto</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_8">
           <item row="0" column="0">
@@ -2186,7 +2186,7 @@ color: #FFFFFF;
        <item row="1" column="1" colspan="2">
         <widget class="QGroupBox" name="groupBox_4">
          <property name="title">
-          <string>GroupBox</string>
+          <string>Datos Laborales</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_12">
           <item row="0" column="0">
